[gd_scene load_steps=13 format=3 uid="uid://stw5o24tuait"]

[ext_resource type="Script" path="res://addons/wallet_interface/src/scripts_and_node/wallet_interface.gd" id="1_ojqeb"]
[ext_resource type="PackedScene" uid="uid://db4wvgualh8ts" path="res://addons/wallet_interface/src/scripts_and_node/mainconnectbutton.tscn" id="3_tt3h4"]
[ext_resource type="Texture2D" uid="uid://df2q64dvop442" path="res://addons/wallet_interface/assets/icons/icon.svg" id="4_6homn"]
[ext_resource type="Script" path="res://addons/wallet_interface/src/scripts_and_node/connected_section.gd" id="4_kbhq7"]
[ext_resource type="Texture2D" uid="uid://c6qauk3qwiuxm" path="res://addons/wallet_interface/assets/icons/3d-print.png" id="5_vlbrm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v5ppe"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.141176, 0.141176, 0.188235, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.614637, 0.616034, 0.713062, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7wq6j"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.305381, 0.305525, 0.387897, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pnbxb"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.211765, 0.321569, 0.909804, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_04r03"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.1406, 0.142247, 0.19, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qf5kl"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jxwwm"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_65lgd"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0

[node name="wallet_Interface" type="Control" node_paths=PackedStringArray("mainconnectbutton")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_ojqeb")
mainconnectbutton = [NodePath("mainconnectbutton")]
metadata/_edit_lock_ = true

[node name="mainconnectbutton" parent="." instance=ExtResource("3_tt3h4")]
mouse_filter = 2

[node name="close_section" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ConnectedSection" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -185.0
offset_top = -199.5
offset_right = 185.0
offset_bottom = 199.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v5ppe")
script = ExtResource("4_kbhq7")

[node name="Body" type="VBoxContainer" parent="ConnectedSection"]
layout_mode = 2

[node name="TittleSection" type="HBoxContainer" parent="ConnectedSection/Body"]
layout_mode = 2

[node name="Tittle" type="Label" parent="ConnectedSection/Body/TittleSection"]
layout_mode = 2
size_flags_horizontal = 3
text = "Connected Address"

[node name="CloseButton" type="Button" parent="ConnectedSection/Body/TittleSection"]
layout_mode = 2
size_flags_horizontal = 0
text = "X"
flat = true

[node name="AddressContainer" type="PanelContainer" parent="ConnectedSection/Body"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7wq6j")

[node name="HBoxContainer" type="HBoxContainer" parent="ConnectedSection/Body/AddressContainer"]
layout_mode = 2

[node name="AddressLabel" type="Label" parent="ConnectedSection/Body/AddressContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0xD4CE...B827"

[node name="CopyButton" type="Button" parent="ConnectedSection/Body/AddressContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Copy Address"

[node name="AmountLabel" type="Label" parent="ConnectedSection/Body"]
layout_mode = 2
text = "8.94 sei"

[node name="DisconnectButton" type="Button" parent="ConnectedSection/Body"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_pnbxb")
text = "Disconnect"

[node name="connect_wallet" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.491
anchor_top = 0.5
anchor_right = 0.491
anchor_bottom = 0.5
offset_left = -251.614
offset_top = -208.5
offset_right = 251.386
offset_bottom = 157.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_04r03")

[node name="Body" type="HBoxContainer" parent="connect_wallet"]
layout_mode = 2

[node name="WalletSection" type="VBoxContainer" parent="connect_wallet/Body"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_constants/separation = 8

[node name="row" type="HBoxContainer" parent="connect_wallet/Body/WalletSection"]
layout_mode = 2

[node name="Label" type="Label" parent="connect_wallet/Body/WalletSection/row"]
layout_mode = 2
text = "Connect a wallet"

[node name="wallets" type="VBoxContainer" parent="connect_wallet/Body/WalletSection"]
layout_mode = 2

[node name="Label2" type="Label" parent="connect_wallet/Body/WalletSection/wallets"]
layout_mode = 2
theme_override_colors/font_color = Color(0.40188, 0.588225, 0.994415, 1)
theme_override_font_sizes/font_size = 10
text = "Installed"

[node name="Button" type="Button" parent="connect_wallet/Body/WalletSection/wallets"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_qf5kl")
toggle_mode = true
text = "Metamask"
icon = ExtResource("4_6homn")
alignment = 0
expand_icon = true

[node name="VSeparator" type="VSeparator" parent="connect_wallet/Body"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_jxwwm")

[node name="extra text" type="VBoxContainer" parent="connect_wallet/Body"]
layout_mode = 2
size_flags_horizontal = 3

[node name="row" type="HBoxContainer" parent="connect_wallet/Body/extra text"]
layout_mode = 2
alignment = 2

[node name="CloseButton" type="Button" parent="connect_wallet/Body/extra text/row"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_65lgd")
text = "X"
flat = true

[node name="column" type="VBoxContainer" parent="connect_wallet/Body/extra text"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Label2" type="Label" parent="connect_wallet/Body/extra text/column"]
layout_mode = 2
text = "What is a wallet?"
horizontal_alignment = 1

[node name="row" type="HBoxContainer" parent="connect_wallet/Body/extra text/column"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="img" type="TextureRect" parent="connect_wallet/Body/extra text/column/row"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("5_vlbrm")
expand_mode = 4
stretch_mode = 5

[node name="column" type="VBoxContainer" parent="connect_wallet/Body/extra text/column/row"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="connect_wallet/Body/extra text/column/row/column"]
layout_mode = 2
theme_override_font_sizes/font_size = 0
text = "Software Wallets"

[node name="Label4" type="Label" parent="connect_wallet/Body/extra text/column/row/column"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Apps or browser extensions that manage private keys and interact with the blockchain, available for desktop and mobile."
autowrap_mode = 2

[connection signal="gui_input" from="close_section" to="." method="_on_close_section_gui_input"]
[connection signal="pressed" from="ConnectedSection/Body/TittleSection/CloseButton" to="." method="close_connect_section"]
[connection signal="pressed" from="ConnectedSection/Body/TittleSection/CloseButton" to="ConnectedSection" method="close_self"]
[connection signal="pressed" from="ConnectedSection/Body/AddressContainer/HBoxContainer/CopyButton" to="ConnectedSection" method="copy_to_clipboard"]
[connection signal="pressed" from="ConnectedSection/Body/DisconnectButton" to="." method="_connect_wallet"]
[connection signal="pressed" from="connect_wallet/Body/WalletSection/wallets/Button" to="." method="_connect_wallet"]
[connection signal="pressed" from="connect_wallet/Body/extra text/row/CloseButton" to="." method="close_connect_section"]
